refactor: 메소드 분리 및 스트림 변경